...

                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
                        app:layout_constraintEnd_toStartOf="@+id/textview_general_total_spending"
                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
                        app:layout_constraintVertical_bias="0.309"
...
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
                        app:layout_constraintEnd_toStartOf="@+id/textview_summary_num_trans"
                        app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
                        app:layout_constraintVertical_bias="0.681"
...

                    <Spinner
                        android:id="@+id/spinner_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_custom_report_most"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_custom_report_least"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/viewpager_report"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
...

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                    android:layout_height="400dp"
                    android:layout_marginHorizontal="50dp"
                    android:id="@+id/report_last_year"
                    android:orientation="vertical"
                    android:background="@drawable/background_dark_blue"
...

                            <TextView
                                android:id="@+id/textview_lastYear_transactionsCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/textview_lastYear_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/textview_lastYear_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/textview_lastYear_percentage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
                        android:layout_marginEnd="24dp"
                        android:pointerIcon="grabbing"
                        android:id="@+id/spinner_timebase_report"
                       />

...

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/gridlayout_timebase_report"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
...
                        <com.github.mikephil.charting.charts.LineChart

                            android:id="@+id/lineChart_spending"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
...
                                />
                            <Button
                                android:id="@+id/button_report_from"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
                                />
                            <Button
                                android:id="@+id/button_report_to"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
                            android:layout_weight="1">
                            <Button
                                android:id="@+id/button_get_report"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                                <TextView
                                    android:id="@+id/textview_customTime_totalTrans"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/textview_customTime_totalAmount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/textview_customTime_average"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/textview_customTime_percentage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
